[tool.poetry]
name = "backend-interview"
version = "0.1.0"
description = ""
authors = ["Lucas Braga <lucascmf.braga@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_interview"}]

[tool.poetry.dependencies]
python = "^3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.6.1",
    "fastapi>=0.109.1",
    "uvicorn>=0.27.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.1",
    "uuid>=1.30",
    "python-multipart>=0.0.9",
    "greenlet>=2.0.2",
    "httpx>=0.26.0",
    "pydantic-settings>=2.0.3",
    "redis>=5.0.1",
    "arq>=0.25.0",
    "bcrypt>=4.1.1",
    "fastcrud>=0.15.5",
    "gunicorn>=23.0.0",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
    "arcadepy>=1.7.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
