[tool.poetry]
name = "backend-interview"
version = "0.1.0"
description = ""
authors = ["Lucas Braga <lucascmf.braga@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_interview"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
httpx = "^0.28.1"
arcadepy = "^1.7.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
